Fix wrong background into cards

--- a/client/src/app/home/home.component.scss
+++ b/client/src/app/home/home.component.scss
@@ -11,9 +11,9 @@
   background-size: cover;
 }
 
-.top-nav-collapse {
+/*.top-nav-collapse {
   background-color: #24355C;
-}
+}*/
 
 @media (max-width: 768px) {
   .navbar:not(.top-nav-collapse) {
